open source link

--- a/app/views/pages/einfuehrung.html.haml
+++ b/app/views/pages/einfuehrung.html.haml
@@ -79,14 +79,7 @@
     %p
       Ja. Die ganze Plattform ist Dank
       %a{:href => "https://github.com/frankfurt-gestalten", :target => "_blank"}
-        Open Source Software bald frei verfügbar.
-      -#Das Schwesterprojekt
-      -#%a{:href => "http://www.unserac.de", :target => "_blank"}
-      -#  unserAC.de
-      -#hat hier mit der
-      -#%a{:href => "http://www.aachener-stiftung.de", :target => "_blank"}
-        Aachener Stiftung Kathy Beys
-      -#großartige Unterstützung geleistet.
+        Open Source Software frei verfügbar.
     %h4
       Wie finanziert sich diese Website?
     %p
