--- a/app/views/layouts/_footer_js.html.haml
+++ b/app/views/layouts/_footer_js.html.haml
@@ -1,12 +1,14 @@
 :javascript
-  var pkBaseURL = (("https:" == document.location.protocol) ? "https://piwik.crisscrossed.net/" : "http://piwik.crisscrossed.net/");
-  document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-
-  try {
-  var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 3);
-  piwikTracker.trackPageView();
-  piwikTracker.enableLinkTracking();
-  } catch( err ) {}
+  var _paq = _paq || [];
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://piwik.crisscrossed.net/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', 3]);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
+    g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
 
 = javascript_include_tag "application"
 :javascript
