turn off comments temporary

--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
-.row
+-#.row
   .large-10.columns
     = form_for([commentable, Comment.new()], :html => {:class => 'comment' }) do |f|
       - unless current_user
