--- a/app/views/layouts/_footer_js.html.haml
+++ b/app/views/layouts/_footer_js.html.haml
@@ -23,5 +23,7 @@
     callback: function() { $('#request').foundation('reveal', 'open'); }
   });
 
+%script{:src => "https://www.google.com/recaptcha/api.js"}
+
 = yield(:footer)
 = yield(:inline_js)
