--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
--#.row
+.row
   .large-10.columns
     = form_for([commentable, Comment.new()], :html => {:class => 'comment' }) do |f|
       - unless current_user
@@ -8,7 +8,8 @@
       - unless current_user
         .row
           .large-8.columns
-            = recaptcha_tags
+            .g-recaptcha{"data-sitekey" => "6LffAO4SAAAAANPqWJbOpw9l46J9NjEZO-U42U1v"}
+            -#= recaptcha_tags
           .large-4.columns
             Spam-Filter umgehen?
             = link_to "Einfach Mitglied  werden!", new_registration_path('user')
