--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -8,7 +8,7 @@
       - unless current_user
         .row
           .large-8.columns
-            .g-recaptcha{"data-sitekey" => "6LffAO4SAAAAANPqWJbOpw9l46J9NjEZO-U42U1v"}
+            = recaptcha_tags
           .large-4.columns
             Spam-Filter umgehen?
             = link_to "Einfach Mitglied  werden!", new_registration_path('user')
