--- a/app/views/pages/einfuehrung.html.haml
+++ b/app/views/pages/einfuehrung.html.haml
@@ -83,7 +83,9 @@
     %h4
       Wie finanziert sich diese Website?
     %p
-      Die Webseite lebt von ehrenamtlichem Engagement und von Spenden.
+      Die Webseite lebt von ehrenamtlichem Engagement und von Spenden. Das Hosting und ein Teil der Programmierung wird von
+      %a{:href => "https://www.wethinq.com/de/"}
+        WE THINQ gesponsert.
     %h4
       Ist Frankfurt-Gestalten.de mit einer Partei verbunden?
     %p
