--- a/app/views/pages/einfuehrung.html.haml
+++ b/app/views/pages/einfuehrung.html.haml
@@ -84,7 +84,7 @@
       Wie finanziert sich diese Website?
     %p
       Die Webseite lebt von ehrenamtlichem Engagement und von Spenden. Das Hosting und ein Teil der Programmierung wird von
-      %a{:href => "https://www.wethinq.com/de/"}
+      %a{:href => "https://www.wethinq.com/de/", :target => "_blank"}
         WE THINQ gesponsert.
     %h4
       Ist Frankfurt-Gestalten.de mit einer Partei verbunden?
