--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -100,6 +100,12 @@ h1 {
   margin-top: 25px;
 }
 
+ul.button-group a.button {
+  height: 40px;
+  font-size: 18px;
+  line-height: 14px;
+}
+
 #login .button {
   background-color: #eeeeee;
   color: $blue;
