--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,19 @@ ul.button-group a.button {
   line-height: 14px;
 }
 
+.search-box button {
+  height: 40px;
+  line-height: 14px;
+}
+
+.search-box .fa {
+  margin-left: -10px;
+}
+
+.reveal-modal-bg {
+  z-index: 1;
+}
+
 #login .button {
   background-color: #eeeeee;
   color: $blue;
@@ -365,33 +378,6 @@ a.leaflet-draw-draw-marker:hover {
 .leaflet-top, .leaflet-bottom {
   z-index: 0;
 }
-
-////////// $search /////////
-
-.search-box input[type=text]  {
-  font-size: 15px;
-  height: 39px;
-}
-
-.search-box span {
-  height: 39px;
-}
-
-span.postfix, label.postfix {
-background: $orange;
-border-color: $orange;
-border-left: none;
-}
-
-.search-box span .fa-search  {
-  margin-left: -10px;
-  margin-top: -2px;
-}
-
-.search.index input[type=text]  {
-  font-size: 25px;
-    height: 50px;
-  }
 
 ////// $chosen ///////
 
