--- a/app/assets/stylesheets/foundation/_settings.scss
+++ b/app/assets/stylesheets/foundation/_settings.scss
@@ -116,7 +116,7 @@ $include-html-global-classes: $include-html-classes;
 // $black       : #000000;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
+ $primary-color: #1e5073;
  $secondary-color: #E96300;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
