--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -20,7 +20,7 @@
       %a{:href => "https://github.com/frankfurt-gestalten", :target => "_blank"}
         %span.fa.fa-external-link
         Open Source Code
-#request.reveal-modal.medium{"data-reveal" => ""}
+-#request.reveal-modal.medium{"data-reveal" => ""}
   %h2
     %i{:class => "icon-envelope"}
     Wir bitten um deine Unterstützung!
@@ -49,7 +49,7 @@
     Ich hab leider gerade keine Zeit.
   %a.close-reveal-modal ×
 
-#login-window.reveal-modal.medium{"data-reveal" => ""}
+#login-window.reveal-modal.medium{"aria-hidden" => "true", "aria-labelledby" => "modalTitle", "data-reveal" => "", :role => "dialog"}
   .row.user
     .large-8.medium-12.columns
       %h2
