--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -16,5 +16,5 @@
       = @page.content.html_safe
   .large-4.medium-4.columns
     = render 'widgets/recent_updated_initiatives'
-    = render 'widgets/newsletter_signup'
     = render 'widgets/recent_comments'
+    = render_widgets 'sidebar'
