--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,23 +4,21 @@
 /[if IE 7 ] <html class="ie7" lang="en">
 /[if IE 8 ] <html class="ie8" lang="en">
 / [if (gte IE 9)|!(IE)]><!
-%html{:lang => "de"}
+%html{ lang: 'de' }
   / <![endif]
-  = render "/layouts/header"
+  = render '/layouts/header'
   %body
     = render 'layouts/topframe'
     .row#main
       .large-12.medium-12.columns
         .row
-          - if any_widgets?('sidebar')
-            .large-8.columns
+          - if any_widgets?('content_bottom')
+            .large-12.columns
               = yield
               = render_widgets 'content_bottom'
-            .large-4.columns
-              = render_widgets 'sidebar'
           - else
             .large-12.columns
               = yield
               = render_widgets 'content_bottom'
-    = render "/layouts/footer"
+    = render '/layouts/footer'
     = render '/layouts/footer_js'
