--- a/app/views/widgets/_form.html.haml
+++ b/app/views/widgets/_form.html.haml
@@ -26,7 +26,7 @@
         = d.select(:action, [['index', 'index'],['show', 'show'],['start', 'start']])
         %h3
           = d.label "Bereiche", :class => ''
-        = d.select(:controller, [['Initiativen', 'initiatives'],['Normale Seiten', 'pages'],['Veranstaltungen', 'neuigkeiten'],['Ratsinfo', 'antraeges'],['Quartier', 'quarters'],['Kommune', 'kommunens']])
+        = d.select(:controller, [['Initiativen', 'initiatives'],['Normale Seiten', 'pages'],['Veranstaltungen', 'neuigkeiten'],['Antraege', 'antraeges'],['Quartier', 'quarters'],['Kommune', 'kommunens']])
         %h3
           = d.label "Layout", :class => ''
         = d.select(:position, [['Rechte Spalte', 'sidebar'], ['Unter dem Inhalt','content_bottom'], ['Nirgends', 'nil']])
