--- a/app/views/widgets/_recent_constructions.html.haml
+++ b/app/views/widgets/_recent_constructions.html.haml
@@ -12,4 +12,10 @@
   - else
     %p
       Zur Zeit keine Baustellen in diesem Stadtteil. Gute Fahrt!
-
+  %span.smaller-font
+    Diese Informationen werden Ihnen bereitgestellt von:
+    %br
+    Stadt Frankfurt am Main, Straßenverkehrsamt
+    Lizenz:
+    %a{href: "https://www.govdata.de/dl-de/by-2-0", target: "_blank"}
+      Datenlizenz Deutschland - Namensnennung - Version 2.0
