add links to license detail

--- a/app/views/widgets/_recent_constructions.html.haml
+++ b/app/views/widgets/_recent_constructions.html.haml
@@ -19,3 +19,5 @@
     Lizenz:
     %a{href: "https://www.govdata.de/dl-de/by-2-0", target: "_blank"}
       Datenlizenz Deutschland - Namensnennung - Version 2.0
+    %a{href: "http://www.frankfurt-gestalten.de/impressum"}
+      Weitere Informationen
