--- a/app/views/constructions/show.html.haml
+++ b/app/views/constructions/show.html.haml
@@ -16,6 +16,8 @@
         Lizenz:
         %a{href: "https://www.govdata.de/dl-de/by-2-0", target: "_blank"}
           Datenlizenz Deutschland - Namensnennung - Version 2.0
+        %a{href: "http://www.frankfurt-gestalten.de/impressum"}
+          Weitere Informationen
     %p
       %b
         #{pluralize(@construction.comments.count(:id), "Kommentar")}
