--- a/app/views/constructions/show.html.haml
+++ b/app/views/constructions/show.html.haml
@@ -17,7 +17,7 @@
         %a{href: "https://www.govdata.de/dl-de/by-2-0", target: "_blank"}
           Datenlizenz Deutschland - Namensnennung - Version 2.0
         %br
-        %a{href: "http://www.frankfurt-gestalten.de/impressum"}
+        %a{href: "http://www.frankfurt-gestalten.de/impressum#baustellen"}
           Weitere Informationen
     %p
       %b
