--- a/app/views/initiatives/show.html.haml
+++ b/app/views/initiatives/show.html.haml
@@ -105,7 +105,7 @@
         %ul.no-bullet#supporter
           - @initiative.supporters.each do |supporter|
             %li.panel.larger-font{ class: 'support-#{supporter.user.id}' }
-              - if supporter.user
+              - if supporter.user.present?
                 = link_to image_tag(avatar_url(supporter.user, 25), alt: supporter.user.username, width: "25", height: "25", class: "avatar"), profile_path(supporter.user)
                 = link_to supporter.user.username, profile_path(supporter.user)
 
