change to neutral nutzer for name if removed

--- a/app/views/initiatives/show.html.haml
+++ b/app/views/initiatives/show.html.haml
@@ -15,7 +15,7 @@
 
               #{link_to @initiative.user.username, profile_path(@initiative.user)}
             - else
-              = @initiative.user.username
+              "Nutzer"
           - if @initiative.visible != true
             .label.round.alert
               Nicht veröffentlicht
